--- a/index.html
+++ b/index.html
@@ -2,12 +2,35 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="mystyle.css">
     <meta charset="UTF-8">
     <title>Test</title>
 </head>
 
 <body>
-strona internetowa html
+    <h1>My heading</h1>
+    <p id="myParagraph">My paragraph</p>
+    <p>My paragraph 2</p>
+    <a href="https://futurecollars.com/">This is a link</a>
+
+    <table>
+        <tr>
+            <th>Company</th>
+            <th>Contact</th>
+            <th>Country</th>
+        </tr>
+        <tr>
+            <td>futurecollars sp. z o.o</td>
+            <td>123123123</td>
+            <td>Poland</td>
+        </tr>
+        <tr>
+            <td>Google corp</td>
+            <td>234234234</td>
+            <td>USA</td>
+        </tr>
+    </table>
+
 </body>
 
 </html>
