--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="mystyle.css">
+    <script src="myscript.js"></script>
     <meta charset="UTF-8">
     <title>Test</title>
 </head>
@@ -30,7 +31,6 @@
             <td>USA</td>
         </tr>
     </table>
-
 </body>
 
 </html>
