--- a/index.html
+++ b/index.html
@@ -9,28 +9,17 @@
 </head>
 
 <body>
-    <h1>My heading</h1>
-    <p id="myParagraph">My paragraph</p>
-    <p>My paragraph 2</p>
-    <a href="https://futurecollars.com/">This is a link</a>
 
-    <table>
-        <tr>
-            <th>Company</th>
-            <th>Contact</th>
-            <th>Country</th>
-        </tr>
-        <tr>
-            <td>futurecollars sp. z o.o</td>
-            <td>123123123</td>
-            <td>Poland</td>
-        </tr>
-        <tr>
-            <td>Google corp</td>
-            <td>234234234</td>
-            <td>USA</td>
-        </tr>
-    </table>
+    <div id="message"></div>
+    
+    <form>
+        <label for="inputBox">Podaj imię</label>
+        <input type="text" id="inputBox" placeholder="aaa">
+        <input type="date">
+        <br/>
+        <input type="submit" id="actionButton" value="My Button"> 
+    </form>
+
 </body>
 
 </html>
